--- a/src/app/modules/dashboard/layout/layout.html
+++ b/src/app/modules/dashboard/layout/layout.html
@@ -11,6 +11,6 @@
         <!-- <router-outlet></router-outlet> -->
       </div>
     </div>
-    <!-- <app-footer></app-footer> -->
+    <app-footer></app-footer>
   </div>
 </div>
