--- a/src/app/modules/dashboard/layout/layout.html
+++ b/src/app/modules/dashboard/layout/layout.html
@@ -3,7 +3,7 @@
   <app-sidebar></app-sidebar>
   <div class="flex grow flex-col content-start overflow-hidden bg-card">
     <!-- Header -->
-    <!-- <app-navbar></app-navbar> -->
+    <app-navbar></app-navbar>
     <!-- main content -->
     <div id="main-content"
       class="scrollbar-thumb-rounded scrollbar-track-rounded grow overflow-auto scrollbar-thin scrollbar-track-transparent scrollbar-thumb-muted">
